# rn-litert-gemma4

./: .gitignore  .npmignore  .npmrc  .release-it.json  BUILD.md  FORK.md  LICENSE  NOTICE  README.md  app.plugin.js  package-lock.json  package.json  react-native-litert-lm.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/margelo/nitro/dev/litert/litertlm/: HybridLiteRTLM.kt  LiteRTLMRegistry.kt
android/src/main/java/dev/litert/litertlm/: LiteRTLMInitProvider.kt
cpp/: HybridLiteRTLM.cpp  HybridLiteRTLM.hpp  cpp-adapter.cpp  rust_alloc_shim.c
cpp/include/: litert_lm_engine.h
example/: .gitignore  App.tsx  README.md  app.config.js  app.json  metro.config.js  package-lock.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rnmcpdemo/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/RnMcpDemo/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  RnMcpDemo.entitlements
example/ios/RnMcpDemo.xcodeproj/: project.pbxproj  project.pbxproj.bak
example/ios/RnMcpDemo.xcodeproj/xcshareddata/xcschemes/: RnMcpDemo.xcscheme
example/scripts/: run-and-verify.sh
scripts/: build-ios-engine.sh  build-ios-xcframework.sh  copy-litert-gpu-dylibs.sh  download-ios-frameworks.sh  postinstall.js
scripts/patches/: ios-engine-fixes.patch
src/: hooks.ts  index.ts  memoryTracker.ts  modelFactory.ts
src/specs/: LiteRTLM.nitro.ts
